# DistVAE-Tabular

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  example.ipynb  pyproject.toml  run.sh  runbump.sh  setup.py
.github/workflows/: publish.yml
distvae_tabular/: distvae.py
