[tool.poetry]
name = "distvae-tabular"
version = "0.1.7"
description = "Package for Synthetic Data Generation using Distributional Learninig of VAE"
authors = ["an-seunghwan <dpeltms79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10"
torch = "2.2.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.4"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
